[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/art/ui/char_expression/Millie_Bored.png" type="Texture" id=1]
[ext_resource path="res://assets/art/ui/DialogBox.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/DialogArrow.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/Dialog/Dialog.gd" type="Script" id=4]
[ext_resource path="res://src/UserInterface/Dialog/DialogControl_RandomLine.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/sfx/Talking.wav" type="AudioStream" id=6]
[ext_resource path="res://src/UserInterface/Dialog/Choices_RandomLine.gd" type="Script" id=7]

[sub_resource type="Animation" id=4]
resource_name = "ChoiceButtonPos"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Choices/Choice1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 206, 107 ), Vector2( 206, 105 ), Vector2( 206, 107 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Choices/Choice2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 296, 107 ), Vector2( 296, 105 ), Vector2( 296, 107.333 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ChoiceButtonPos2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Choices/Choice1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 107 ), Vector2( 50, 109 ), Vector2( 50, 107 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Choices/Choice2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 142, 107 ), Vector2( 142, 109 ), Vector2( 142, 106.667 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "DialogNextArrow"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DialogArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 535, 134 ), Vector2( 535, 127 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "DialogNextArrow2"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DialogArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -61, 134 ), Vector2( -61, 127 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DialogArrow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 432, 134 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Choices/Choice1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 206, 107 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Choices/Choice2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 296, 106 ) ]
}

[node name="DialogPlayer" type="CanvasLayer"]
layer = 100

[node name="Dialog" type="Node2D" parent="."]
script = ExtResource( 4 )
dialog_file = "res://src/UserInterface/Dialog/DialogData/DialogResource.tres"

[node name="DialogControl" type="Control" parent="."]
anchor_left = 0.517
anchor_top = 1.0
anchor_right = 0.517
anchor_bottom = 1.0
margin_left = -238.76
margin_top = -211.0
margin_right = 238.24
margin_bottom = -38.0
script = ExtResource( 5 )

[node name="DialogContainer" type="HBoxContainer" parent="DialogControl"]
visible = false
anchor_left = 0.5
anchor_top = 1.208
anchor_right = 0.5
anchor_bottom = 1.208
margin_left = -338.5
margin_top = -203.984
margin_right = 336.5
margin_bottom = -36.984
custom_constants/separation = 0

[node name="PortraitBoxLeft" type="NinePatchRect" parent="DialogControl/DialogContainer"]
visible = false
margin_right = 202.0
margin_bottom = 167.0
size_flags_horizontal = 3
texture = ExtResource( 2 )

[node name="DialogBox" type="NinePatchRect" parent="DialogControl/DialogContainer"]
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 675.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.83
texture = ExtResource( 2 )
patch_margin_left = 76
patch_margin_right = 72

[node name="Dialog" type="RichTextLabel" parent="DialogControl/DialogContainer/DialogBox"]
anchor_left = 0.095
anchor_top = 0.224
anchor_right = 0.907
anchor_bottom = 0.776
margin_left = 0.560001
margin_top = 0.799999
margin_right = -0.264008
margin_bottom = 0.199997
rect_clip_content = false
custom_colors/default_color = Color( 0.129412, 0.0862745, 0.0862745, 1 )
custom_constants/table_vseparation = 0
custom_constants/table_hseparation = 0
custom_constants/line_separation = 4
bbcode_enabled = true

[node name="PortraitBoxRight" type="NinePatchRect" parent="DialogControl/DialogContainer"]
visible = false
margin_left = 572.0
margin_right = 775.0
margin_bottom = 167.0
size_flags_horizontal = 3
texture = ExtResource( 2 )

[node name="Portrait" type="Sprite" parent="DialogControl"]
visible = false
position = Vector2( 60.116, 60 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="SpeakerName" type="Label" parent="DialogControl"]
visible = false
anchor_left = 0.547
anchor_top = 1.0
anchor_right = 0.547
anchor_bottom = 1.0
margin_left = -227.919
margin_top = -42.0
margin_right = -179.919
margin_bottom = -28.0
custom_colors/font_color = Color( 0.129412, 0.0862745, 0.0862745, 1 )
text = "Millie 1"
align = 1
valign = 1

[node name="DialogTextTimer" type="Timer" parent="DialogControl"]

[node name="Choices" type="Node2D" parent="DialogControl"]
script = ExtResource( 7 )

[node name="Choice1" type="Button" parent="DialogControl/Choices"]
visible = false
margin_left = 206.0
margin_top = 107.0
margin_right = 287.0
margin_bottom = 127.0

[node name="Choice2" type="Button" parent="DialogControl/Choices"]
visible = false
margin_left = 296.0
margin_top = 106.0
margin_right = 378.0
margin_bottom = 126.0

[node name="Timer" type="Timer" parent="DialogControl/Choices"]
wait_time = 0.5

[node name="DialogArrow" type="Sprite" parent="DialogControl"]
visible = false
position = Vector2( 432, 134 )
rotation = 2.07694
scale = Vector2( 0.0818608, 0.136896 )
texture = ExtResource( 3 )

[node name="DialogAnim" type="AnimationPlayer" parent="DialogControl"]
anims/ChoiceButtonPos = SubResource( 4 )
anims/ChoiceButtonPos2 = SubResource( 5 )
anims/DialogNextArrow = SubResource( 1 )
anims/DialogNextArrow2 = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Talking" type="AudioStreamPlayer" parent="DialogControl"]
stream = ExtResource( 6 )
pitch_scale = 0.5
bus = "Sfx"

[node name="LeftPortraitPosition" type="Position2D" parent="."]
position = Vector2( 200, 470 )

[node name="RightPortraitPosition" type="Position2D" parent="."]
position = Vector2( 1080, 470 )

[node name="LeftNamePosition" type="Control" parent="."]
margin_left = 458.0
margin_top = 648.0
margin_right = 458.0
margin_bottom = 648.0

[node name="RightNamePosition" type="Control" parent="."]
margin_left = 816.0
margin_top = 648.0
margin_right = 816.0
margin_bottom = 648.0

[connection signal="pressed" from="DialogControl/Choices/Choice1" to="DialogControl/Choices" method="_on_Choice1_pressed"]
[connection signal="pressed" from="DialogControl/Choices/Choice2" to="DialogControl/Choices" method="_on_Choice2_pressed"]
